samples/_failures_safe/1761351065_e98444_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59013e6d.c: In function ‘main’:
./samples/SAFE/__tmp_59013e6d.c:128:9: error: expected declaration or statement at end of input
  128 |         return EXIT_FAILURE;
      |         ^~~~~~
./samples/SAFE/__tmp_59013e6d.c:128:9: error: expected declaration or statement at end of input
